[package]
name = "rustydb"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustydb"
path = "src/lib.rs"

[[bin]]
name = "rustydb"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
config = "0.14.1"
crossbeam = "0.8.4"
dyn-clone = "1.0.17"
hdrhistogram = "7.5.4"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.20"
predicates = "3.1.2"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3.1"
regex = "1.11.1"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
itertools = "0.13.0"
tempfile = "3.13.0"